[YSDT] item page color size wrap fix

--- a/ysdt/scss/item.scss
+++ b/ysdt/scss/item.scss
@@ -192,7 +192,8 @@
         }
         .value {
             display: flex;
-            width: 525px;
+            flex-flow: row wrap;
+            width: 520px;
             position: relative;
             z-index: 0;
             .icon_check::before{
